# art-prompt-webhook

./: Cargo.toml  README.md
src/: main.rs
static/: adjective.json  animal.json  noun.json  words.json
