[package]
name = "art-prompt-webhook"
version = "1.0.0"
edition = "2021"
authors = ["bitfl0wer"]
repository = "https://github.com/bitfl0wer/art-prompt-webhook"
description = "Sends a message to a Discord webhook with a random word from [random-word-form](https://random-word-form.repl.co/random/noun)."
license = "Unlicense"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"

[profile.release]
strip = true
opt-level = 3     # Set to "s" or "z" to optimize for build size, or "3" for speed.
lto = true
codegen-units = 1
